Fixed header blur and members clipping into the notice

--- a/css/members.css
+++ b/css/members.css
@@ -28,7 +28,7 @@
 }
 
 .member-list-container {
-    margin-top: 100px;
+    margin-top: 150px;
 }
 
 .member-list-header p {
