--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ header {
     position: absolute;
     width: 100%;
     height: 100%;
-    background: linear-gradient(rgba(0,0,0,0.7), rgba(19,19,19,0.4));
+    background: linear-gradient(rgba(0,0,0,0.7), rgba(19,19,19,0.5));
     z-index: -1;
     opacity: 0;
     transition: ease;
@@ -162,7 +162,7 @@ header h1 {
 }
 
 .nav-item a {
-    opacity: 0.8;
+    opacity: 0.5;
 }
 
 .nav-item.active a {
@@ -197,7 +197,7 @@ header h1 {
     width: 1px;
     height: 40%;
     background-color: white;
-    opacity: 50%;
+    opacity: 0.5;
 }
 
 .hamburger {
